# tugraz-esp-cmakelists-generator

./: CMakeLists.txt  execute_provided_tests_on_wsl_for.py  generate_cmakelists_for_all_c_files.py  generate_cmakelists_for_all_cpp_files.py  prepare_wsl_for_executing_tests.py
