cmake_minimum_required(VERSION 3.10)
project(esp_ku C)

set(CMAKE_C_STANDARD 11)

# generated executables:
add_executable("assignment_b1_594_ass-b1.c" "../assignment_b1_594/ass-b1.c")
add_executable("assignment_b1_594_testscripts_template_c_template.c" "../assignment_b1_594/testscripts/template/c_template.c")
add_executable("hello_world_hw.c" "../hello_world/hw.c")
